Create TaskList class